@@ -1,5 +1,6 @@
 2012-02-02:
-- Added an updated explanation of the project.
+- Added an updated explanation of the project
+- Built second half of ccowprogress.py
 
 2012-02-01:
 - Closed a file left open in ccowhelp.py
